Fix weird filter checkbox hover state on mobile (#330)
* Add breakpoint to show hover on desktop only

* Add comment

* Tweak mixin usage

* Find/replace grey with -grey

--- a/packages/reference/client/scss/10_settings/_colors.scss
+++ b/packages/reference/client/scss/10_settings/_colors.scss
@@ -43,3 +43,4 @@ $checkout-grey: #e3e3e1;
 $font-dark-grey: #666666;
 $form-input-border: #999999;
 $light-grey: #f1f1f0;
+$medium-grey: #808080;
