--- a/packages/reference/client/scss/60_components/_c-account-forgotpassword.scss
+++ b/packages/reference/client/scss/60_components/_c-account-forgotpassword.scss
@@ -11,7 +11,7 @@
 
   &__caption {
     text-align: center;
-    color: grey;
+    color: $medium-grey;
     font-weight: 300;
   }
 
