--- a/packages/reference/client/scss/60_components/_c-account-login.scss
+++ b/packages/reference/client/scss/60_components/_c-account-login.scss
@@ -31,7 +31,7 @@
   &__anchor {
     display: block;
     text-align: center;
-    color: grey;
+    color: $medium-grey;
     font-weight: 300;
   }
 
