--- a/packages/reference/client/scss/60_components/_c-account-register.scss
+++ b/packages/reference/client/scss/60_components/_c-account-register.scss
@@ -18,7 +18,7 @@
     }
 
     &-caption {
-      color: grey;
+      color: $medium-grey;
       font-weight: 300;
     }
   }
