--- a/packages/reference/client/scss/60_components/_c-gallery-third.scss
+++ b/packages/reference/client/scss/60_components/_c-gallery-third.scss
@@ -18,7 +18,7 @@
   }
 
   &__text {
-    color: grey;
+    color: $medium-grey;
     font-size: 0.9rem;
     height: 7rem;
     margin-top: 8rem;
