--- a/packages/reference/client/scss/65_scopes/algolia_instantsearch/_ais-RefinementList.scss
+++ b/packages/reference/client/scss/65_scopes/algolia_instantsearch/_ais-RefinementList.scss
@@ -17,7 +17,7 @@
   }
 
   &-count {
-    color: grey;
+    color: $medium-grey;
 
     &:after {
       content:")"
